# OS_Lab1

./: CMakeLists.txt  Creator.cpp  OS_Lab1.vcxproj  OS_Lab1.vcxproj.filters  README.md  Reporter.cpp  main.cpp  test_creator.cpp  test_main.cpp  test_reporter.cpp
x64/Debug/: vc143.idb
x64/Debug/OS_Lab1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OS_Lab1.lastbuildstate
x64/Release/OS_Lab1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OS_Lab1.lastbuildstate
